--- a/app/src/main/res/layout/layout_generic_on_off.xml
+++ b/app/src/main/res/layout/layout_generic_on_off.xml
@@ -72,7 +72,8 @@
                     app:layout_constraintBottom_toTopOf="@+id/transition_slider"
                     app:layout_constraintEnd_toStartOf="@id/transition_time"
                     app:layout_constraintStart_toStartOf="@id/transition_slider"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:visibility="invisible"/>
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/transition_time"
@@ -89,20 +90,23 @@
                     app:layout_constraintEnd_toEndOf="@id/transition_slider"
                     app:layout_constraintStart_toEndOf="@id/transition"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:ignore="HardcodedText" />
+                    tools:ignore="HardcodedText"
+                    android:visibility="invisible"/>
 
                 <com.google.android.material.slider.Slider
                     android:id="@+id/transition_slider"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/activity_horizontal_margin"
-                    android:layout_marginTop="@dimen/activity_vertical_margin"
+                    android:layout_marginTop="104dp"
                     android:layout_marginEnd="@dimen/activity_horizontal_margin"
                     app:labelBehavior="gone"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/transition"
-                    tools:ignore="SpeakableTextPresentCheck" />
+                    tools:ignore="SpeakableTextPresentCheck"
+                    android:visibility="invisible"/>
 
 
                 <com.google.android.material.textview.MaterialTextView
@@ -119,21 +123,24 @@
                     android:textSize="18sp"
                     app:layout_constraintEnd_toStartOf="@id/transition_time"
                     app:layout_constraintStart_toStartOf="@id/delay_slider"
-                    app:layout_constraintTop_toBottomOf="@id/transition_slider" />
+                    app:layout_constraintTop_toBottomOf="@id/transition_slider"
+                    android:visibility="invisible"/>
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/delay_time"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/activity_horizontal_margin"
-                    android:layout_marginTop="@dimen/activity_vertical_margin"
+                    android:layout_marginTop="88dp"
                     android:layout_marginEnd="@dimen/activity_horizontal_margin"
                     android:gravity="end"
                     android:paddingStart="@dimen/item_padding_start"
                     android:paddingEnd="@dimen/item_padding_end"
                     android:text="0 ms"
                     android:textSize="18sp"
+                    android:visibility="invisible"
                     app:layout_constraintEnd_toEndOf="@id/transition_slider"
+                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="@id/delay_slider"
                     app:layout_constraintTop_toBottomOf="@id/transition_slider"
                     tools:ignore="HardcodedText" />
@@ -149,8 +156,27 @@
                     app:labelBehavior="gone"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/delay" />
+                    app:layout_constraintTop_toBottomOf="@id/delay"
+                    app:layout_constraintVertical_bias="0.0"
+                    android:visibility="invisible"/>
+
+                <ImageView
+                    android:id="@+id/imageViewHigh"
+                    android:layout_width="250dp"
+                    android:layout_height="250dp"
+                    app:srcCompat="@drawable/ic_launcher_background"
+                    tools:layout_editor_absoluteX="80dp"
+                    tools:layout_editor_absoluteY="-42dp" />
+
+                <Button
+                    android:id="@+id/buttonHigh"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="相片拍攝"
+                    tools:layout_editor_absoluteX="313dp"
+                    tools:layout_editor_absoluteY="101dp" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -163,10 +189,11 @@
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 android:text="@string/state"
-                android:visibility="visible"
+                android:visibility="invisible"
                 app:layout_constraintEnd_toStartOf="@id/on_off_state"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/container_controls" />
+                app:layout_constraintTop_toBottomOf="@id/container_controls"
+                />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/on_off_state"
@@ -184,7 +211,8 @@
                 app:layout_constraintBottom_toTopOf="@+id/div3"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/state"
-                app:layout_constraintTop_toTopOf="@+id/state" />
+                app:layout_constraintTop_toTopOf="@+id/state"
+                android:visibility="invisible"/>
 
             <include
                 android:id="@+id/div3"
@@ -231,33 +259,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@id/action_on" />
 
-
-
-
-            <Button
-                android:id="@+id/buttonHigh"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="264dp"
-                android:layout_marginBottom="16dp"
-                android:text="相片拍攝"
-                app:layout_constraintBottom_toTopOf="@+id/guideline2"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/imageViewHigh"
-                android:layout_width="250dp"
-                android:layout_height="250dp"
-                app:layout_constraintBottom_toTopOf="@+id/buttonHigh"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.496"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.47"
-                app:srcCompat="@drawable/ic_launcher_background" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/title_Red"
@@ -338,7 +339,7 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.881" />
+                app:layout_constraintVertical_bias="0.922" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
